--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -32,6 +32,11 @@
 .title + .icon {
     margin-left: 8px;
 }
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
 
 // Button types
 .round {
