--- a/src/components/Layout/component/Header/Header.module.scss
+++ b/src/components/Layout/component/Header/Header.module.scss
@@ -14,6 +14,7 @@
     .inner {
         height: 100%;
         width: var(--default-layout-width);
+        padding: 0 var(--default-layout-horizontal-spacer);
 
         display: flex;
         align-items: center;
@@ -101,4 +102,20 @@
             padding: 8px 16px;
         }
     }
+}
+
+.actions {
+    .more-btn {
+        font-size: 2rem;
+        margin-left: 28px;
+        padding: 4px 8px;
+
+        background-color: transparent;
+        cursor: pointer;
+    }
+}
+
+// menu
+.menu-items {
+    width: 224px;
 }
