--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,11 +1,9 @@
 @import "normalize.css";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
-    // --primary: #fe2c55;
-    --primary: rgba(254, 44, 85, 1);
+    --primary: #fe2c55;
     --black: #000;
     --white: #fff;
-    // --text-color: deeppink;
     --text-color: #161823;
 
     // Default layout
@@ -71,25 +69,26 @@ a[href] {
 //     font-weight: 700;
 // }
 
-// // Custom tippy tooltip
-// body {
-//     .tippy-box {
-//         border-radius: 8px;
-//         font-weight: 600;
-//         font-size: 1.6rem;
-//         line-height: 2.2rem;
-//         background-color: rgba(84, 84, 84, 0.92);
-//     }
+// Custom tippy tooltip
+body {
+    .tippy-box {
+        // border-radius: 8px;
+        // font-weight: 600;
+        // line-height: 2.2rem;
 
-//     .tippy-arrow {
-//         color: rgba(84, 84, 84, 0.92);
-//     }
+        font-size: 1.6rem;
+        background-color: rgba(84, 84, 84, 0.92);
+    }
 
-//     .tippy-content {
-//         padding: 8px 9px;
-//     }
+    .tippy-arrow {
+        color: rgba(84, 84, 84, 0.92);
+    }
 
-//     .tippy-box[data-placement^="bottom"] > .tippy-arrow:before {
-//         top: -8px;
-//     }
-// }
+    .tippy-content {
+        padding: 8px 10px;
+    }
+
+    .tippy-box[data-placement^="bottom"] > .tippy-arrow:before {
+        top: -8px;
+    }
+}
