--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -14,10 +14,14 @@
 
             line-height: 2rem;
             padding: 10px 16px;
-            font-weight: 500;
+            font-weight: 600;
 
             &:hover {
                 background-color: rgba(22, 24, 35, 0.05);
+            }
+
+            &.separate {
+                border-top: 1px solid rgba(22, 24, 35, 0.12);
             }
         }
     }
