--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,11 +4,12 @@
     justify-content: center;
 
     user-select: none;
-
     padding: 8px 16px;
     border-radius: 4px;
+
     font-size: 1.6rem;
     font-weight: 700;
+    font-family: "ProximaNova";
 
     min-width: 100px;
     cursor: pointer;
