--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-    font-family: "ProximaNova", sans-serif;
+    // font-family: "ProximaNova", "Montserrat", sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizespeed;
@@ -44,30 +44,18 @@ a[href] {
     text-decoration: none;
 }
 
-// // Fonts emmbeded
-// @font-face {
-//     font-family: ProximaNova;
-//     src: url("/assets/fonts/Proxima-Nova-Regular.woff2");
-//     font-weight: 400;
-// }
+// Fonts emmbeded
+@font-face {
+    font-family: ProximaNova;
+    src: url("/assets/fonts/Proxima-Nova-Regular.woff2");
+    font-weight: 400;
+}
 
-// @font-face {
-//     font-family: ProximaNova;
-//     src: url("/assets/fonts/ProximaNova-Semibold.woff2");
-//     font-weight: 600;
-// }
-
-// @font-face {
-//     font-family: ProximaNova;
-//     src: url("/assets/fonts/Proxima-Nova-Bold.woff");
-//     font-weight: 700;
-// }
-
-// @font-face {
-//     font-family: SofiaPro;
-//     src: url("/assets/fonts/sofiapro-bold.woff");
-//     font-weight: 700;
-// }
+@font-face {
+    font-family: ProximaNova;
+    src: url("/assets/fonts/ProximaNova-Semibold.woff2");
+    font-weight: 600;
+}
 
 // Custom tippy tooltip
 body {
