logic search + api + debounce

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-    // font-family: "ProximaNova", "Montserrat", sans-serif;
+    font-family: "ProximaNova", "Montserrat", sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizespeed;
