77-hoàn thiện header

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,8 @@
     --white: #fff;
     --text-color: #161823;
 
+    --font-family: "ProximaNova", sans-serif, "Montserrat";
+
     // Default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
@@ -22,14 +24,41 @@ html {
     font-size: 62.5%;
 }
 
+// scrollbar - css
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+
 body {
-    font-family: "ProximaNova", "Montserrat", sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizespeed;
     color: var(--text-color);
 
-    overflow: overlay;
+    overflow-y: overlay;
+    background-color: rgba(255, 255, 255, 1);
 }
 
 button,
