--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -9,7 +9,7 @@
 
     font-size: 1.6rem;
     font-weight: 700;
-    font-family: "ProximaNova";
+    font-family: var(--font-family);
 
     min-width: 100px;
     cursor: pointer;
