--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -4,6 +4,8 @@
     flex-direction: column;
     align-items: center;
 
+    margin-top: var(--default-layout-header-height);
+
     .container {
         width: var(--default-layout-width);
         min-height: 1000px;
