--- a/src/components/Layout/component/Header/Header.module.scss
+++ b/src/components/Layout/component/Header/Header.module.scss
@@ -10,6 +10,12 @@
     width: 100%;
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+    background-color: var(--white);
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
 
     .inner {
         height: 100%;
@@ -19,6 +25,10 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        .logo {
+            display: flex;
+        }
     }
 }
 
